--- a/client/src/pages/CreatePost/CreatePost.css
+++ b/client/src/pages/CreatePost/CreatePost.css
@@ -89,3 +89,9 @@
     margin-left: 10px;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 520px) {
+    .box-input .image-upload {
+      min-width: 32px;
+    }
+  }
